--- a/index.html
+++ b/index.html
@@ -1,134 +1,144 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yasmin ❤️</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Yasmin ❤️</title>
 
-  <!-- Fonte profissional -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;900&display=swap" rel="stylesheet">
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    body {
-      background: black;
-      color: white;
-      font-family: 'Inter', system-ui, sans-serif;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+body {
+  height: 100vh;
+  background: radial-gradient(circle at top, #111, #000);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  font-family: 'Inter', system-ui, sans-serif;
+  color: white;
+}
 
-    /* TELA INICIAL */
-    .start-screen {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-      cursor: pointer;
-    }
+/* TELA INICIAL */
+.start {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  cursor: pointer;
+  animation: pulse 2.4s infinite;
+}
 
-    .start-screen span {
-      letter-spacing: 0.2em;
-      opacity: 0.8;
-    }
+.start .heart {
+  font-size: 5rem;
+}
 
-    .heart {
-      font-size: 90px;
-      animation: pulse 1.5s infinite;
-    }
+.start span {
+  font-size: 0.9rem;
+  letter-spacing: 0.35em;
+  opacity: 0.7;
+}
 
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.15); }
-      100% { transform: scale(1); }
-    }
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.08); }
+  100% { transform: scale(1); }
+}
 
-    /* MENSAGEM (COMEÇA ESCONDIDA) */
-    .message {
-      display: none;
-      position: absolute;
-      text-align: center;
-      font-size: 3rem;
-      font-weight: 900;
-      letter-spacing: 0.15em;
-      text-transform: uppercase;
-      text-shadow: 0 0 30px rgba(255, 0, 120, 0.6);
-      padding: 20px;
-    }
+/* MENSAGEM */
+.message {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  opacity: 0;
+  transform: scale(0.96);
+  pointer-events: none;
+  transition: opacity 0.9s ease, transform 0.9s ease;
+}
 
-    /* CORAÇÕES */
-    .floating-heart {
-      position: absolute;
-      bottom: -20px;
-      color: red;
-      font-size: 20px;
-      animation: float 6s linear forwards;
-      opacity: 0.8;
-    }
+.message.show {
+  opacity: 1;
+  transform: scale(1);
+  pointer-events: auto;
+}
 
-    @keyframes float {
-      0% {
-        transform: translateY(0);
-        opacity: 0.8;
-      }
-      100% {
-        transform: translateY(-120vh);
-        opacity: 0;
-      }
-    }
+.message h1 {
+  font-size: clamp(3.2rem, 9vw, 6.2rem);
+  font-weight: 900;
+  letter-spacing: 0.22em;
+  text-transform: uppercase;
+  line-height: 1.1;
+  text-shadow:
+    0 0 30px rgba(255, 0, 120, 0.55),
+    0 0 60px rgba(255, 0, 120, 0.35);
+}
 
-    /* MOBILE */
-    @media (max-width: 600px) {
-      .message {
-        font-size: 2.2rem;
-      }
-    }
-  </style>
+/* CORAÇÕES */
+.float-heart {
+  position: absolute;
+  bottom: -40px;
+  color: rgba(255, 0, 120, 0.8);
+  animation: floatUp linear forwards;
+  pointer-events: none;
+}
+
+@keyframes floatUp {
+  from {
+    transform: translateY(0) scale(1);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-120vh) scale(1.4);
+    opacity: 0;
+  }
+}
+</style>
 </head>
+
 <body>
 
-  <!-- TELA INICIAL -->
-  <div class="start-screen" onclick="startLove()">
-    <div class="heart">❤️</div>
-    <span>APERTE AQUI</span>
-  </div>
+<!-- TELA INICIAL -->
+<div class="start" id="start">
+  <div class="heart">❤️</div>
+  <span>APERTE AQUI</span>
+</div>
 
-  <!-- MENSAGEM -->
-  <div class="message" id="message">
-    TE AMO<br>YASMIN
-  </div>
+<!-- MENSAGEM (TOTALMENTE OCULTA NO INÍCIO) -->
+<div class="message" id="message">
+  <h1>TE AMO<br>YASMIN ❤️</h1>
+</div>
 
-  <script>
-    function startLove() {
-      document.querySelector('.start-screen').style.display = 'none';
-      document.getElementById('message').style.display = 'block';
+<script>
+const start = document.getElementById("start");
+const message = document.getElementById("message");
 
-      setInterval(createHeart, 300);
-    }
+start.addEventListener("click", () => {
+  start.remove();
+  message.classList.add("show");
+  setInterval(createHeart, 700);
+});
 
-    function createHeart() {
-      const heart = document.createElement('div');
-      heart.classList.add('floating-heart');
-      heart.innerHTML = '❤️';
-      heart.style.left = Math.random() * 100 + 'vw';
-      heart.style.fontSize = (15 + Math.random() * 20) + 'px';
-      document.body.appendChild(heart);
+function createHeart() {
+  const heart = document.createElement("div");
+  heart.className = "float-heart";
+  heart.textContent = "❤️";
 
-      setTimeout(() => {
-        heart.remove();
-      }, 6000);
-    }
-  </script>
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.fontSize = (14 + Math.random() * 18) + "px";
+  heart.style.animationDuration = (6 + Math.random() * 4) + "s";
 
-</body>
-</html>
+  document.body.appendChild(heart);
+  setTimeout(() => heart.remove(), 10000);
+}
+</sc
