--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     /* MOBILE */
     @media (max-width: 600px) {
       .message {
-        font-size: 2.2rem;
+        font-size: clamp(2.8rem, 9vw, 3.6rem);
       }
     }
   </style>
