--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     /* MOBILE */
     @media (max-width: 600px) {
       .message {
-        font-size: clamp(2.8rem, 9vw, 3.6rem);
+        font-size: clamp(3.2rem, 10vw, 4.2rem);
       }
     }
   </style>
@@ -100,7 +100,7 @@
   <!-- TELA INICIAL -->
   <div class="start-screen" onclick="startLove()">
     <div class="heart">❤️</div>
-    <span>APERTE AQUI</span>
+    <span>APERTA AQUI</span>
   </div>
 
   <!-- MENSAGEM -->
