--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yasmin ❤️</title>
 
-  <!-- Fonte profissional -->
+  <!-- Fonte -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;900&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
       100% { transform: scale(1); }
     }
 
-    /* MENSAGEM (COMEÇA ESCONDIDA) */
+    /* MENSAGEM */
     .message {
       display: none;
       position: absolute;
@@ -64,13 +64,13 @@
       text-transform: uppercase;
       text-shadow: 0 0 30px rgba(255, 0, 120, 0.6);
       padding: 20px;
+      opacity: 0;
     }
 
     /* CORAÇÕES */
     .floating-heart {
       position: absolute;
       bottom: -20px;
-      color: red;
       font-size: 20px;
       animation: float 6s linear forwards;
       opacity: 0.8;
@@ -84,6 +84,37 @@
       100% {
         transform: translateY(-120vh);
         opacity: 0;
+      }
+    }
+
+    /* TRANSIÇÕES */
+    .fade-out {
+      animation: fadeOut 0.8s forwards;
+    }
+
+    .fade-in {
+      animation: fadeIn 1.2s forwards;
+    }
+
+    @keyframes fadeOut {
+      from {
+        opacity: 1;
+        transform: scale(1);
+      }
+      to {
+        opacity: 0;
+        transform: scale(0.9);
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: scale(1.2);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
       }
     }
 
@@ -110,10 +141,18 @@
 
   <script>
     function startLove() {
-      document.querySelector('.start-screen').style.display = 'none';
-      document.getElementById('message').style.display = 'block';
+      const startScreen = document.querySelector('.start-screen');
+      const message = document.getElementById('message');
 
-      setInterval(createHeart, 300);
+      startScreen.classList.add('fade-out');
+
+      setTimeout(() => {
+        startScreen.style.display = 'none';
+        message.style.display = 'block';
+        message.classList.add('fade-in');
+
+        setInterval(createHeart, 300);
+      }, 800);
     }
 
     function createHeart() {
