--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ textarea {
 
 <body>
 <header class="wrap">
-  <h2>📝 Minhas Notas</h2>
+  <h2>📝 Notas</h2>
   <small>localStorage</small>
 </header>
 
@@ -173,7 +173,7 @@ textarea {
 </main>
 
 <script>
-const KEY = "notas_v2";
+const KEY = "notas_v1";
 let editingId = null;
 
 function getNotes() {
