--- a/index.html
+++ b/index.html
@@ -3,187 +3,137 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Minhas Notas</title>
+<title>Bloco de Notas</title>
 
 <style>
 :root {
   --bg:#0f1220;
-  --card:#171a2e;
+  --panel:#14172a;
+  --border:#232862;
   --text:#e9ecff;
-  --muted:#9aa1ff;
   --accent:#6c7bff;
 }
 
-* { box-sizing:border-box; font-family:system-ui; }
+* {
+  box-sizing:border-box;
+  font-family: Consolas, "Courier New", monospace;
+}
 
 body {
   margin:0;
-  background:linear-gradient(120deg,#0f1220,#0b0e1a);
+  background:var(--bg);
   color:var(--text);
 }
 
-.wrap {
-  max-width:1100px;   /* largura grande */
-  margin:auto;
-  padding:16px;
+/* ===== LAYOUT ===== */
+.app {
+  display:grid;
+  grid-template-columns:260px 1fr;
+  height:100vh;
 }
 
-header {
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+/* ===== LISTA DE NOTAS ===== */
+.sidebar {
+  background:var(--panel);
+  border-right:1px solid var(--border);
+  padding:10px;
 }
 
-/* ===== ABAS ===== */
-.tabs {
-  display:flex;
-  gap:10px;
-  margin:16px auto;
-  max-width:1100px;
+.sidebar h3 {
+  margin:6px 6px 12px;
+  font-size:0.9rem;
+  color:#bfc6ff;
 }
 
-.tabs button {
-  padding:10px 18px;
-  font-size:1rem;
-  border-radius:14px;
-  border:1px solid #232862;
-  background:var(--card);
-  color:var(--text);
+.note-item {
+  padding:8px 10px;
+  border-radius:6px;
   cursor:pointer;
+  font-size:0.85rem;
+  color:#d7dcff;
 }
 
-.tabs button.active {
-  background:linear-gradient(135deg,var(--accent),#8b95ff);
-  color:#0b0e1a;
-  border:none;
+.note-item:hover {
+  background:#1c2040;
 }
 
-/* ===== SEÇÕES ===== */
-.section { display:none; }
-.section.active { display:block; }
-
-/* ===== NOTAS GRANDES ===== */
-#notes {
-  display:flex;
-  flex-direction:column;
-  gap:26px;
-}
-
-.note {
-  background:var(--card);
-  border:1px solid #232862;
-  border-radius:26px;
-  padding:32px;
-}
-
-.note h3 {
-  margin:0 0 10px;
-  font-size:1.4rem;
-}
-
-.note p {
-  margin:0;
-  font-size:1.1rem;
-  line-height:1.75;
-  color:#e0e4ff;
-}
-
-.actions {
-  display:flex;
-  justify-content:flex-end;
-  gap:10px;
-  margin-top:16px;
-}
-
-button {
-  background:var(--card);
-  color:var(--text);
-  border:1px solid #232862;
-  border-radius:12px;
-  padding:8px 14px;
-  cursor:pointer;
-}
-
-button.primary {
-  background:linear-gradient(135deg,var(--accent),#8b95ff);
-  border:none;
+.note-item.active {
+  background:var(--accent);
   color:#0b0e1a;
 }
 
 /* ===== EDITOR ===== */
 .editor {
-  max-width:900px;
-  margin:auto;
+  display:flex;
+  flex-direction:column;
+  height:100%;
 }
 
 .toolbar {
-  display:grid;
-  grid-template-columns:1fr auto auto;
-  gap:12px;
-  margin-bottom:12px;
+  padding:8px;
+  border-bottom:1px solid var(--border);
+  display:flex;
+  gap:8px;
 }
 
-input, textarea {
-  width:100%;
-  background:var(--card);
+button {
+  background:#1c2040;
   color:var(--text);
-  border:1px solid #232862;
-  border-radius:14px;
-  padding:12px;
-  font-size:1rem;
+  border:1px solid var(--border);
+  border-radius:6px;
+  padding:6px 10px;
+  cursor:pointer;
+  font-size:0.8rem;
+}
+
+button.primary {
+  background:var(--accent);
+  color:#0b0e1a;
+  border:none;
 }
 
 textarea {
-  min-height:500px;
+  flex:1;
+  background:#0b0e1a;
+  color:#e9ecff;
+  border:none;
+  padding:14px;
+  font-size:0.95rem;
   line-height:1.6;
-  resize:vertical;
+  resize:none;
+  outline:none;
 }
 </style>
 </head>
 
 <body>
 
-<header class="wrap">
-  <h2>📝 Minhas Notas</h2>
-  <small>salvo no navegador</small>
-</header>
+<div class="app">
 
-<div class="tabs">
-  <button class="active" onclick="openTab('view', this)">📚 Notas</button>
-  <button onclick="openTab('edit', this)">✏️ Editar</button>
-</div>
+  <!-- LISTA -->
+  <aside class="sidebar">
+    <h3>NOTAS</h3>
+    <div id="list"></div>
+  </aside>
 
-<!-- ABA NOTAS -->
-<section id="view" class="wrap section active">
-  <div id="notes"></div>
-</section>
-
-<!-- ABA EDITOR -->
-<section id="edit" class="wrap section">
-  <div class="editor">
+  <!-- EDITOR -->
+  <section class="editor">
     <div class="toolbar">
-      <input id="title" placeholder="Título">
-      <button class="primary" onclick="save()">Salvar</button>
-      <button onclick="clearAll()">Limpar</button>
+      <button class="primary" onclick="newNote()">Nova</button>
+      <button onclick="save()">Salvar</button>
+      <button onclick="del()">Excluir</button>
     </div>
-    <textarea id="content" placeholder="Escreva sua nota..."></textarea>
-  </div>
-</section>
+    <textarea id="text" placeholder="Escreva aqui..."></textarea>
+  </section>
+
+</div>
 
 <script>
 const KEY = "notas_v1";
-let editingId = null;
+let index = null;
 
-const notesEl = document.getElementById("notes");
-const titleEl = document.getElementById("title");
-const contentEl = document.getElementById("content");
-
-function openTab(id, btn) {
-  document.querySelectorAll(".section").forEach(s => s.classList.remove("active"));
-  document.querySelectorAll(".tabs button").forEach(b => b.classList.remove("active"));
-  document.getElementById(id).classList.add("active");
-  btn.classList.add("active");
-}
+const listEl = document.getElementById("list");
+const textEl = document.getElementById("text");
 
 function getNotes() {
   return JSON.parse(localStorage.getItem(KEY) || "[]");
@@ -194,56 +144,55 @@ function setNotes(n) {
   render();
 }
 
+function newNote() {
+  textEl.value = "";
+  index = null;
+  highlight();
+}
+
 function save() {
-  const title = titleEl.value.trim();
-  const content = contentEl.value.trim();
-  if (!title && !content) return;
-
   const notes = getNotes();
+  const content = textEl.value.trim();
+  if (!content) return;
 
-  if (editingId) {
-    const n = notes.find(n => n.id === editingId);
-    n.title = title || "Sem título";
-    n.content = content;
-    editingId = null;
+  if (index !== null) {
+    notes[index] = content;
   } else {
-    notes.unshift({ id: Date.now(), title: title || "Sem título", content });
+    notes.unshift(content);
+    index = 0;
   }
 
   setNotes(notes);
-  titleEl.value = "";
-  contentEl.value = "";
-  openTab('view', document.querySelector('.tabs button'));
 }
 
-function edit(id) {
-  const n = getNotes().find(n => n.id === id);
-  titleEl.value = n.title;
-  contentEl.value = n.content;
-  editingId = id;
-  openTab('edit', document.querySelectorAll('.tabs button')[1]);
+function load(i) {
+  index = i;
+  textEl.value = getNotes()[i];
+  highlight();
 }
 
-function del(id) {
-  setNotes(getNotes().filter(n => n.id !== id));
+function del() {
+  if (index === null) return;
+  const notes = getNotes();
+  notes.splice(index,1);
+  setNotes(notes);
+  newNote();
 }
 
-function clearAll() {
-  if (confirm("Apagar todas as notas?")) setNotes([]);
+function highlight() {
+  document.querySelectorAll(".note-item").forEach((n,i)=>{
+    n.classList.toggle("active", i === index);
+  });
 }
 
 function render() {
   const notes = getNotes();
-  notesEl.innerHTML = notes.map(n => `
-    <article class="note">
-      <h3>${n.title}</h3>
-      <p>${n.content.replace(/</g,"&lt;")}</p>
-      <div class="actions">
-        <button onclick="edit(${n.id})">Editar</button>
-        <button onclick="del(${n.id})">Excluir</button>
-      </div>
-    </article>
+  listEl.innerHTML = notes.map((n,i)=>`
+    <div class="note-item" onclick="load(${i})">
+      ${n.slice(0,30).replace(/\n/g," ")}
+    </div>
   `).join("");
+  highlight();
 }
 
 render();
