--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   --accent:#6c7bff;
 }
 
-* { box-sizing:border-box; font-family:system-ui; }
+* {
+  box-sizing:border-box;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+}
 
 body {
   margin:0;
@@ -22,79 +25,53 @@ body {
   color:var(--text);
 }
 
-/* ⬅️ NÃO CENTRALIZA MAIS */
+/* layout levemente à direita */
 .wrap {
-  max-width:1400px;
-  margin-left:24px;
-  margin-right:24px;
-  padding:16px;
+  max-width:1100px;
+  margin-left:80px;
+  margin-right:auto;
+  padding:20px;
 }
 
 header {
   display:flex;
   justify-content:space-between;
   align-items:center;
+  margin-bottom:16px;
 }
-
-/* ===== ABAS ===== */
-.tabs {
-  display:flex;
-  gap:10px;
-  margin:16px 24px;
-}
-
-.tabs button {
-  padding:10px 18px;
-  font-size:1rem;
-  border-radius:14px;
-  border:1px solid #232862;
-  background:var(--card);
-  color:var(--text);
-  cursor:pointer;
-}
-
-.tabs button.active {
-  background:linear-gradient(135deg,var(--accent),#8b95ff);
-  color:#0b0e1a;
-  border:none;
-}
-
-/* ===== SEÇÕES ===== */
-.section { display:none; }
-.section.active { display:block; }
 
 /* ===== NOTAS GRANDES ===== */
 #notes {
   display:flex;
   flex-direction:column;
-  gap:26px;
-  max-width:900px; /* notas bem à esquerda */
+  gap:28px;
 }
 
 .note {
   background:var(--card);
   border:1px solid #232862;
   border-radius:26px;
-  padding:32px;
+  padding:34px;
 }
 
 .note h3 {
-  margin:0 0 10px;
-  font-size:1.4rem;
+  margin:0 0 14px;
+  font-size:1.6rem;
 }
 
 .note p {
   margin:0;
-  font-size:1.1rem;
-  line-height:1.75;
-  color:#e0e4ff;
+  font-size:1.15rem;
+  line-height:1.8;
+  color:#e4e7ff;
+  white-space:pre-wrap;
 }
 
 .actions {
   display:flex;
   justify-content:flex-end;
-  gap:10px;
-  margin-top:16px;
+  gap:12px;
+  margin-top:18px;
 }
 
 button {
@@ -102,8 +79,9 @@ button {
   color:var(--text);
   border:1px solid #232862;
   border-radius:12px;
-  padding:8px 14px;
+  padding:10px 16px;
   cursor:pointer;
+  font-size:0.95rem;
 }
 
 button.primary {
@@ -114,14 +92,14 @@ button.primary {
 
 /* ===== EDITOR ===== */
 .editor {
-  max-width:900px;
+  max-width:1000px;
 }
 
 .toolbar {
   display:grid;
   grid-template-columns:1fr auto auto;
-  gap:12px;
-  margin-bottom:12px;
+  gap:14px;
+  margin-bottom:14px;
 }
 
 input, textarea {
@@ -130,14 +108,19 @@ input, textarea {
   color:var(--text);
   border:1px solid #232862;
   border-radius:14px;
-  padding:12px;
-  font-size:1rem;
+  padding:14px;
+  font-size:1.05rem;
 }
 
 textarea {
-  min-height:500px;
-  line-height:1.6;
+  min-height:520px;
+  line-height:1.75;
   resize:vertical;
+}
+
+/* esconder visualização quando estiver editando */
+.hidden {
+  display:none;
 }
 </style>
 </head>
@@ -149,26 +132,19 @@ textarea {
   <small>salvo no navegador</small>
 </header>
 
-<div class="tabs">
-  <button class="active" onclick="openTab('view', this)">📚 Notas</button>
-  <button onclick="openTab('edit', this)">✏️ Editar</button>
-</div>
-
-<!-- ABA NOTAS -->
-<section id="view" class="wrap section active">
-  <div id="notes"></div>
-</section>
-
-<!-- ABA EDITOR -->
-<section id="edit" class="wrap section">
+<section id="edit" class="wrap">
   <div class="editor">
     <div class="toolbar">
-      <input id="title" placeholder="Título">
+      <input id="title" placeholder="Título da nota">
       <button class="primary" onclick="save()">Salvar</button>
       <button onclick="clearAll()">Limpar</button>
     </div>
     <textarea id="content" placeholder="Escreva sua nota..."></textarea>
   </div>
+</section>
+
+<section id="view" class="wrap hidden">
+  <div id="notes"></div>
 </section>
 
 <script>
@@ -178,13 +154,8 @@ let editingId = null;
 const notesEl = document.getElementById("notes");
 const titleEl = document.getElementById("title");
 const contentEl = document.getElementById("content");
-
-function openTab(id, btn) {
-  document.querySelectorAll(".section").forEach(s => s.classList.remove("active"));
-  document.querySelectorAll(".tabs button").forEach(b => b.classList.remove("active"));
-  document.getElementById(id).classList.add("active");
-  btn.classList.add("active");
-}
+const viewEl = document.getElementById("view");
+const editEl = document.getElementById("edit");
 
 function getNotes() {
   return JSON.parse(localStorage.getItem(KEY) || "[]");
@@ -208,13 +179,16 @@ function save() {
     n.content = content;
     editingId = null;
   } else {
-    notes.unshift({ id: Date.now(), title: title || "Sem título", content });
+    notes.unshift({
+      id: Date.now(),
+      title: title || "Sem título",
+      content
+    });
   }
 
   setNotes(notes);
   titleEl.value = "";
   contentEl.value = "";
-  openTab('view', document.querySelector('.tabs button'));
 }
 
 function edit(id) {
@@ -222,7 +196,8 @@ function edit(id) {
   titleEl.value = n.title;
   contentEl.value = n.content;
   editingId = id;
-  openTab('edit', document.querySelectorAll('.tabs button')[1]);
+  viewEl.classList.add("hidden");
+  editEl.classList.remove("hidden");
 }
 
 function del(id) {
@@ -230,7 +205,10 @@ function del(id) {
 }
 
 function clearAll() {
-  if (confirm("Apagar todas as notas?")) setNotes([]);
+  if (confirm("Apagar todas as notas?")) {
+    localStorage.removeItem(KEY);
+    render();
+  }
 }
 
 function render() {
@@ -247,6 +225,7 @@ function render() {
   `).join("");
 }
 
+/* 🔥 abre SEMPRE no editor */
 render();
 </script>
 
