--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ textarea {
 </section>
 
 <script>
-const KEY = "notas_v1";
+const KEY = "notas_v1_backup";
 let editingId = null;
 
 const notesEl = document.getElementById("notes");
